V1.2 Filter MP4 only files